migrated to KoTest and Added customException handling